# libpimp

./: CMakeLists.txt
example/: main.c
examples/echo/: main.c
include/: pimp.h
src/: pimp.c
